added comment to transaction creation. fixed spaces problem. fixed order problem
