# docs/swagger.json
@@ -634,11 +634,13 @@
                 "summary": "Create new transaction with waiting status for the proposal event if slot is available",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Kurajj_internal_models.TransactionAcceptCreateRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -1560,32 +1562,6 @@
                 }
             }
         },
-        "Kurajj_internal_models.Pagination": {
-            "type": "object",
-            "properties": {
-                "limit": {
-                    "type": "integer"
-                },
-                "nextPage": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer"
-                },
-                "page": {
-                    "type": "integer"
-                },
-                "previousPage": {
-                    "type": "integer"
-                },
-                "totalPage": {
-                    "type": "integer"
-                },
-                "totalRecords": {
-                    "type": "integer"
-                }
-            }
-        },
         "Kurajj_internal_models.ProposalEventGetResponse": {
             "type": "object",
             "properties": {
@@ -1711,14 +1687,32 @@
         "Kurajj_internal_models.ProposalEventsWithPagination": {
             "type": "object",
             "properties": {
-                "pagination": {
-                    "$ref": "#/definitions/Kurajj_internal_models.Pagination"
-                },
-                "proposalEvents": {
+                "items": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/Kurajj_internal_models.ProposalEventGetResponse"
                     }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "nextPage": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "pageNumber": {
+                    "type": "integer"
+                },
+                "previousPage": {
+                    "type": "integer"
+                },
+                "totalPageCount": {
+                    "type": "integer"
+                },
+                "totalRecords": {
+                    "type": "integer"
                 }
             }
         },
@@ -1814,14 +1808,14 @@
                 "profileImageURL": {
                     "type": "string"
                 },
-                "refreshToken": {
-                    "type": "string"
-                },
-                "searchValues": {
+                "proposalEventSearchValues": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/Kurajj_internal_models.SearchValueResponse"
                     }
+                },
+                "refreshToken": {
+                    "type": "string"
                 },
                 "secondName": {
                     "type": "string"
@@ -1913,6 +1907,17 @@
                 },
                 "refreshToken": {
                     "type": "string"
+                }
+            }
+        },
+        "Kurajj_internal_models.TransactionAcceptCreateRequest": {
+            "type": "object",
+            "properties": {
+                "comment": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         },
